cmake_minimum_required(VERSION 3.10)
project(AlgorithmCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(Test test.cpp)
add_executable(TeX_Test Chapter5_String/TeX_Test.c)
add_executable(CycleString Chapter5_String/CycleString.cpp)
add_executable(Chain Version2/DataStructureBasic/LinkedList/ChainNode.cpp Version2/DataStructureBasic/LinkedList/ChainNode.h Version2/DataStructureBasic/LinkedList/Chain.cpp Version2/DataStructureBasic/LinkedList/Chain.h Version2/DataStructureBasic/LinkedList/ChainIterator.cpp Version2/DataStructureBasic/LinkedList/ChainIterator.h)
add_executable(IndirectList Version2/DataStructureBasic/IndirectList/IndirectList.cpp Version2/DataStructureBasic/IndirectList/IndirectList.h Version2/DataStructureBasic/IndirectList/ChainIterator.cpp Version2/DataStructureBasic/IndirectList/ChainIterator.h Version2/DataStructureBasic/IndirectList/IndirectListTest.cpp)
add_executable(StackAndHeap Version2/StackAndHeap/Stack.h Version2/StackAndHeap/Stack.cpp Version2/StackAndHeap/LinkedStack.h Version2/StackAndHeap/LinkedStack.cpp Version2/StackAndHeap/Node.cpp Version2/StackAndHeap/Node.h)
add_executable(Queue Version2/Queue/Queue.cpp Version2/Queue/Queen.h Version2/Queue/LinkedQueue.cpp Version2/Queue/LinkedQueue.h Version2/Queue/Node.cpp Version2/Queue/Node.h)
add_executable(BinaryTree Version2/BinaryTree/BinaryTree.cpp Version2/BinaryTree/BinaryTreeNode.cpp Version2/BinaryTree/BinaryTreeNode.h Version2/BinaryTree/Demo.cpp Version2/BinaryTree/BinaryTree.h)
add_executable(PriorityQueue Version2/PriorityQueue/MaxHeap.h Version2/PriorityQueue/MaxHeap.cpp)
add_executable(CompetitionTree Version2/CompetitionTree/WinnerTree.h Version2/CompetitionTree/WinnerTree.cpp)
add_executable(SearchTree Version2/BinarySearchTree/BSTree.h Version2/BinarySearchTree/BSTree.cpp Version2/BinaryTree/BinaryTree.h Version2/BinaryTree/BinaryTree.cpp)
add_executable(NQueue Queen.cpp)
add_executable(OilDeposits OilDeposits.cpp)
add_executable(TrainProblem TrainProblem.c)
add_executable(M M.cpp)
add_executable(TreeGrafting TreeGrafting.cpp)
add_executable(TeamQueue TeamQueue.cpp)
add_executable(Alibaba Alibaba.cpp)
add_executable(BaiduA BaiduA.cpp)
add_executable(BaiduB BaiduB.cpp)
add_executable(6_1_1 Part2/Chapter6/6_1_1.cpp)
add_executable(6_1_2 Part2/Chapter6/6_1_2.c)