cmake_minimum_required(VERSION 3.10)
project(AlgorithmCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(Test test.cpp)
add_executable(TeX_Test Chapter5_String/TeX_Test.c)
add_executable(CycleString Chapter5_String/CycleString.cpp)
add_executable(Chain 数据结构与算法C++描述/DataStructureBasic/LinkedList/ChainNode.cpp 数据结构与算法C++描述/DataStructureBasic/LinkedList/ChainNode.h 数据结构与算法C++描述/DataStructureBasic/LinkedList/Chain.cpp 数据结构与算法C++描述/DataStructureBasic/LinkedList/Chain.h 数据结构与算法C++描述/DataStructureBasic/LinkedList/ChainIterator.cpp 数据结构与算法C++描述/DataStructureBasic/LinkedList/ChainIterator.h)
add_executable(IndirectList 数据结构与算法C++描述/DataStructureBasic/IndirectList/IndirectList.cpp 数据结构与算法C++描述/DataStructureBasic/IndirectList/IndirectList.h 数据结构与算法C++描述/DataStructureBasic/IndirectList/ChainIterator.cpp 数据结构与算法C++描述/DataStructureBasic/IndirectList/ChainIterator.h 数据结构与算法C++描述/DataStructureBasic/IndirectList/IndirectListTest.cpp)
add_executable(StackAndHeap 数据结构与算法C++描述/StackAndHeap/Stack.h 数据结构与算法C++描述/StackAndHeap/Stack.cpp 数据结构与算法C++描述/StackAndHeap/LinkedStack.h 数据结构与算法C++描述/StackAndHeap/LinkedStack.cpp 数据结构与算法C++描述/StackAndHeap/Node.cpp 数据结构与算法C++描述/StackAndHeap/Node.h)
add_executable(Queue 数据结构与算法C++描述/Queue/Queue.cpp 数据结构与算法C++描述/Queue/Queen.h 数据结构与算法C++描述/Queue/LinkedQueue.cpp 数据结构与算法C++描述/Queue/LinkedQueue.h 数据结构与算法C++描述/Queue/Node.cpp 数据结构与算法C++描述/Queue/Node.h)
add_executable(BinaryTree 数据结构与算法C++描述/BinaryTree/BinaryTree.cpp 数据结构与算法C++描述/BinaryTree/BinaryTreeNode.cpp 数据结构与算法C++描述/BinaryTree/BinaryTreeNode.h 数据结构与算法C++描述/BinaryTree/Demo.cpp 数据结构与算法C++描述/BinaryTree/BinaryTree.h)
add_executable(PriorityQueue 数据结构与算法C++描述/PriorityQueue/MaxHeap.h 数据结构与算法C++描述/PriorityQueue/MaxHeap.cpp)
add_executable(CompetitionTree 数据结构与算法C++描述/CompetitionTree/WinnerTree.h 数据结构与算法C++描述/CompetitionTree/WinnerTree.cpp)
add_executable(SearchTree 数据结构与算法C++描述/BinarySearchTree/BSTree.h 数据结构与算法C++描述/BinarySearchTree/BSTree.cpp 数据结构与算法C++描述/BinaryTree/BinaryTree.h 数据结构与算法C++描述/BinaryTree/BinaryTree.cpp)
add_executable(NQueue Queen.cpp)
add_executable(OilDeposits OilDeposits.cpp)
add_executable(TrainProblem TrainProblem.c)
add_executable(M M.cpp)
add_executable(TreeGrafting TreeGrafting.cpp)
add_executable(TeamQueue TeamQueue.cpp)
add_executable(Alibaba Alibaba.cpp)
add_executable(BaiduA BaiduA.cpp)
add_executable(BaiduB BaiduB.cpp)
add_executable(Demo Demo.cpp)
add_executable(892 LeetCode/892.c)
add_executable(893 LeetCode/893.c)
add_executable(893_cpp LeetCode/893.cpp)
add_executable(830_cpp LeetCode/830.cpp)
add_executable(872_cpp LeetCode/872.cpp)
add_executable(6_1_1 Version1/Chapter6/6_1_1.cpp)
add_executable(6_1_2 Version1/Chapter6/6_1_2.c)
add_executable(6_1_2_cpp Version1/Chapter6/6_1_2.cpp)
add_executable(6_2_2 Version1/Chapter6/6_2_2.c)
add_executable(6_3_1 Version1/Chapter6/6_3_1.c)
add_executable(6_3_1_plus Version1/Chapter6/6_3_1_plus.c)
add_executable(6_3_2 Version1/Chapter6/6_3_2.c)
add_executable(6_3_3 Version1/Chapter6/6_3_3.c)
add_executable(6_4_1 Version1/Chapter6/6_4_1.c)
add_executable(6_4_2 Version1/Chapter6/6_4_2.c)
add_executable(6_4_3 Version1/Chapter6/6_4_3.c)
add_executable(6_4_4 Version1/Chapter6/6_4_4.c)
add_executable(7_2_1 Version1/Chapter7/7_2_1.cpp)
add_executable(Exc_6_1 Version2/Chapter6/Exc_6_1.cpp)
add_executable(Exc_6_2 Version2/Chapter6/Exc_6_2.cpp)
add_executable(a Version2/Chapter6/a.cpp)
